# shared_memory

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  setup.py
shared_memory/: __init__.py  array_layout.py  data_array_layout.py  dataframe_layout.py  layout.py  message_queue.py  ndarray_layout.py  pickle_layout.py  series_layout.py  shared_memory.pyi  struct_layout.py  util.py
src/: SharedMemory.cpp  SharedMemory.h  ShmMessageQueue.cpp  ShmMessageQueue.h  shared_memory.cpp
